--- a/talk.tex
+++ b/talk.tex
@@ -313,6 +313,24 @@
   %
   \emph{Important:} Loop/coupling expansion on r.h.s.\ required to
   avoid non-cancelled higher-order large logarithms.
+
+  \bigskip
+
+  \emph{Precision:} same as pure EFT calculation, except that series
+  of terms of $\ord(v^n/\MS^n)$ is included at $1\Loop$ and $2\Loop$
+  level at the respective orders.
+\end{frame}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\begin{frame}{Uncertainty estimate of the hybrid calculation}
+  Possible uncertainty estimates:
+  \begin{align*}
+    \DMhQpole &= \max_{\Qpole\in[M_t/2,2M_t]}\left|M_h(\Qpole) - M_h(M_t)\right| \\
+    \DMhQmatch &= \max_{\Qmatch\in[\MS/2,2\MS]}\left|M_h(\Qmatch) - M_h(\MS)\right| \\
+    \DMhQlow &= \max_{\Qlow\in[M_Z/2,2M_Z]}\left|M_h(\Qlow) - M_h(M_Z)\right| \\
+    \DMhHSSUSYytSM &= \left| M_h(\hat{y}_t^{3\Loop}(M_Z)) - M_h(\hat{y}_t^{4\Loop}(M_Z)) \right|
+  \end{align*}
 \end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
