improve section titles

--- a/talk.tex
+++ b/talk.tex
@@ -222,7 +222,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Pure Effective Field Theory}
+\section{Pure EFT calculation}
 
 \begin{frame}{Contents}
   \tableofcontents[currentsection,currentsubsection]
@@ -288,7 +288,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Hybrid}
+\section{Hybrid calculation}
 
 \begin{frame}{Contents}
   \tableofcontents[currentsection,currentsubsection]
