--- a/talk.tex
+++ b/talk.tex
@@ -211,10 +211,10 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{frame}{Uncertainty estimate of the EFT calculation}
+\begin{frame}{Uncertainty estimate of the fixed-order calculation}
   Possible uncertainty estimates:
   \begin{align*}
-    \DMhQpole &= \max_{\Qpole\in[M_t/2,2M_t]}\left|M_h(\Qpole) - M_h(M_t)\right| \\
+    \DMhQpole &= \max_{\Qpole\in[\MS/2,2\MS]}\left|M_h(\Qpole) - M_h(\MS)\right| \\
     \DMhQlow &= \max_{\Qlow\in[M_Z/2,2M_Z]}\left|M_h(\Qlow) - M_h(M_Z)\right| \\
     \DMhgsMSSM &= \left| M_h(g_3^{1\Loop}(M_Z)) - M_h(g_3^{2\Loop}(M_Z)) \right|
   \end{align*}
