--- a/talk.tex
+++ b/talk.tex
@@ -185,13 +185,13 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{frame}{Precision of fixed-order calculation (\texttt{NUHMSSMNoFVHimalaya})}
+\begin{frame}{Fixed-order calculation (\texttt{NUHMSSMNoFVHimalaya})}
   \begin{center}
     \begin{tabular}{llll}
       \toprule
       & 1\Loop & 2\Loop & 3\Loop\\
       \midrule
-      $y_t$      & full & $y_tg_3^4$ & -- \\
+      $y_t$      & full & \textcolor{darkgreen}{$y_tg_3^4$} & -- \\
       $y_{b,\tau}$ & full & -- & -- \\
       $g_3$      & full & $g_3^4$ & -- \\
       $g_{1,2}$   & full & -- & -- \\
@@ -202,7 +202,7 @@
       $\beta_{\ldots}$    & full & full & full \\
       $\beta_{v_i}$  & full & full & -- \\
       \midrule
-      $M_h$  & full & $g_3^2(y_t^4+y_b^4)+(y_t^2+y_b^2)^3+(y_t^2+y_\tau^2)^3$ & $g_3^4 y_t^4$ \\
+      $M_h$  & full & $g_3^2(y_t^4+y_b^4)+(y_t^2+y_b^2)^3+(y_t^2+y_\tau^2)^3$ & \textcolor{darkgreen}{$g_3^4 y_t^4$} \\
       \bottomrule
     \end{tabular}
   \end{center}
@@ -212,7 +212,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{frame}{Uncertainty estimate of the fixed-order calculation}
-  Possible uncertainty estimates:
+  Possible uncertainty estimates at $3\Loop$ precision:
   \begin{align*}
     \DMhQpole &= \max_{\Qpole\in[\MS/2,2\MS]}\left|M_h(\Qpole) - M_h(\MS)\right| \\
     \DMhQlow &= \max_{\Qlow\in[M_Z/2,2M_Z]}\left|M_h(\Qlow) - M_h(M_Z)\right| \\
@@ -254,23 +254,22 @@
       \toprule
       & 1\Loop & 2\Loop & 3\Loop & 4\Loop \\
       \midrule
-      $\hat\lambda$  & full & $(\hat{y}_t^4+\hat{y}_b^4)\hat{g}_3^2+(\hat{y}_t^4+\hat{y}_b^4+\hat{y}_\tau^4)^2$ & $\hat{y}_t^4\hat{g}_3^4$ & -- \\
+      $\hat\lambda$  & full & $(\hat{y}_t^4+\hat{y}_b^4)\hat{g}_3^2+(\hat{y}_t^4+\hat{y}_b^4+\hat{y}_\tau^4)^2$ & \textcolor{darkgreen}{$\hat{y}_t^4\hat{g}_3^4$} & -- \\
       $\hat{v}$        & full & -- & -- & -- \\
-      $\hat{y}_t$      & full & $\hat{y}_t\hat{g}_3^4\textcolor{gray}{\,+\,\hat{y}_t^3 \hat{g}_3^2+\hat{y}_t^5}$ & \textcolor{gray}{$\hat{y}_t\hat{g}_3^6$} & $\textcolor{gray}{\hat{y}_t\hat{g}_3^8}$ \\
+      $\hat{y}_t$      & full & $\textcolor{darkgreen}{\hat{y}_t\hat{g}_3^4}{}+\hat{y}_t^3 \hat{g}_3^2+\hat{y}_t^5$ & $\hat{y}_t\hat{g}_3^6$ & $\hat{y}_t\hat{g}_3^8$ \\
       $\hat{y}_{b,\tau}$ & full & -- & -- & -- \\
       $\hat{g}_3$      & full & $\hat{g}_3^4$ & $\hat{g}_3^6$ & -- \\
       $\hat{g}_{1,2}$   & full & -- & -- & -- \\
       \midrule
-      $\beta_{\hat\lambda}$ & full & full & full & $\hat{y}_t^4\hat{g}_3^6$ \\
+      $\beta_{\hat\lambda}$ & full & full & full & \textcolor{darkgreen}{$\hat{y}_t^4\hat{g}_3^6$} \\
       $\beta_{\hat{y}_t}$    & full & full & full & $\hat{y}_t\hat{g}_3^8$ \\
       $\beta_{\hat{g}_3}$    & full & full & full & $\hat{g}_3^{0<n\le 8}$ \\
       $\beta_{\cdots}$  & full & full & full & -- \\
       \midrule
-      $M_h$           & full & $(\hat{y}_t^4+\hat{y}_b^4)\hat{g}_3^2+(\hat{y}_t^4 + \hat{y}_b^4)^2$ & $\hat{y}_t^4 \hat{g}_3^4\textcolor{gray}{\,+\,\hat{y}_t^6\hat{g}_3^2+\hat{y}_t^8}$ & \textcolor{gray}{$\hat{y}_t^4 \hat{g}_3^6$} \\
+      $M_h$           & full & $(\hat{y}_t^4+\hat{y}_b^4)\hat{g}_3^2+(\hat{y}_t^4 + \hat{y}_b^4)^2$ & $\textcolor{darkgreen}{\hat{y}_t^4 \hat{g}_3^4}{}+\hat{y}_t^6\hat{g}_3^2+\hat{y}_t^8$ & $\hat{y}_t^4 \hat{g}_3^6$ \\
       \bottomrule
     \end{tabular}}
   \end{center}
-  \textcolor{gray}{gray}: incomplete contributions w.r.t.\ $M_h$
 \end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
