adding precision point

--- a/talk.tex
+++ b/talk.tex
@@ -206,7 +206,7 @@
       \bottomrule
     \end{tabular}
   \end{center}
-  % \textcolor{red}{red}: incomplete contributions w.r.t.\ $M_h$
+  \textcolor{darkgreen}{green}: required for N$^3$LO SQCD precision
 \end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -270,6 +270,7 @@
       \bottomrule
     \end{tabular}}
   \end{center}
+  \textcolor{darkgreen}{green}: required for N$^3$LO+N$^3$LL SQCD precision
 \end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -310,14 +311,17 @@
     = \frac{(M_h^2)_{\MSSM} - \Delta_{\SM}}{\hat{v}^2(\Qmatch)}
   \end{align*}
   %
-  \emph{Important:} Loop/coupling expansion on r.h.s.\ required to
+  \emph{Important:} loop/coupling expansion on r.h.s.\ required to
   avoid non-cancelled higher-order large logarithms.
 
   \bigskip
 
-  \emph{Precision:} same as pure EFT calculation, except that series
-  of terms of $\ord(v^n/\MS^n)$ is included at $1\Loop$ and $2\Loop$
-  level at the respective orders.
+  \emph{Precision:} N$^3$LO+N$^3$LL (same as pure EFT calculation), plus
+  \begin{itemize}
+  \item series of terms of $\ord(v^n/\MS^n)$ is included at $1\Loop$
+    and $2\Loop$ level at the respective orders
+  \item SQCD-enhanced terms of $x_t^n$ are resummed
+  \end{itemize}
 \end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
