--- a/talk.tex
+++ b/talk.tex
@@ -321,10 +321,12 @@
 
 \appendix
 
-\newcommand{\NUHMSSMNoFVHimalayaMSdata}{data/NUHMSSMNoFVHimalaya_MS-Mh-DMh_TB-20_xt--2.44949.dat}
-\newcommand{\NUHMSSMNoFVHimalayaXtdata}{data/NUHMSSMNoFVHimalaya_Xt-Mh-DMh_MS-3000_TB-20.dat}
-\newcommand{\HSSUSYMSdata}{data/HSSUSY_MS-Mh-DMh_TB-20_xt--2.44949.dat}
-\newcommand{\HSSUSYXtdata}{data/HSSUSY_Xt-Mh-DMh_MS-3000_TB-20.dat}
+\newcommand{\FOMSdata}{data/NUHMSSMNoFVHimalaya_MS-Mh-DMh_TB-20_xt--2.44949.dat}
+\newcommand{\FOXtdata}{data/NUHMSSMNoFVHimalaya_Xt-Mh-DMh_MS-3000_TB-20.dat}
+\newcommand{\EFTMSdata}{data/HSSUSY_MS-Mh-DMh_TB-20_xt--2.44949.dat}
+\newcommand{\EFTXtdata}{data/HSSUSY_Xt-Mh-DMh_MS-3000_TB-20.dat}
+\newcommand{\FEFTMSdata}{data/NUHMSSMNoFVHimalayaEFTHiggs_MS-Mh-DMh_TB-20_xt--2.44949.dat}
+\newcommand{\FEFTXtdata}{data/NUHMSSMNoFVHimalayaEFTHiggs_Xt-Mh-DMh_MS-3000_TB-20.dat}
 
 \begin{frame}{Comparison of FO, EFT, Hybrid}
   \begin{center}
@@ -350,21 +352,29 @@
           ylabel={$M_h$/GeV},
           xticklabels=\empty
         ]
-        \addplot[black,thick,densely dotted] table[x index=0, y index=1] {\NUHMSSMNoFVHimalayaMSdata};
+        \addplot[black,thick,densely dotted] table[x index=0, y index=1] {\FOMSdata};
         \addlegendentry{FO};
-        \addplot[darkgreen,thick,densely dashed] table[x index=0, y index=1] {\HSSUSYMSdata};
+        \addplot[darkgreen,thick,densely dashed] table[x index=0, y index=1] {\EFTMSdata};
         \addlegendentry{EFT};
-        \addplot[name path=upper,draw=none] table[x index=0, y expr=\thisrowno{1}+\thisrowno{2}] {\NUHMSSMNoFVHimalayaMSdata};
-        \addplot[name path=lower,draw=none] table[x index=0, y expr=\thisrowno{1}-\thisrowno{2}] {\NUHMSSMNoFVHimalayaMSdata};
+        \addplot[red,thick] table[x index=0, y index=1] {\FEFTMSdata};
+        \addlegendentry{FEFT};
+        %
+        \addplot[name path=upper,draw=none] table[x index=0, y expr=\thisrowno{1}+\thisrowno{2}] {\FOMSdata};
+        \addplot[name path=lower,draw=none] table[x index=0, y expr=\thisrowno{1}-\thisrowno{2}] {\FOMSdata};
         \addplot[black!30,fill opacity=0.5] fill between[of=upper and lower];
         %
-        \addplot[name path=upper,draw=none] table[x index=0, y expr=\thisrowno{1}+\thisrowno{2}] {\HSSUSYMSdata};
-        \addplot[name path=lower,draw=none] table[x index=0, y expr=\thisrowno{1}-\thisrowno{2}] {\HSSUSYMSdata};
+        \addplot[name path=upper,draw=none] table[x index=0, y expr=\thisrowno{1}+\thisrowno{2}] {\EFTMSdata};
+        \addplot[name path=lower,draw=none] table[x index=0, y expr=\thisrowno{1}-\thisrowno{2}] {\EFTMSdata};
         \addplot[darkgreen!30,fill opacity=0.5] fill between[of=upper and lower];
+        %
+        \addplot[name path=upper,draw=none] table[x index=0, y expr=\thisrowno{1}+\thisrowno{2}] {\FEFTMSdata};
+        \addplot[name path=lower,draw=none] table[x index=0, y expr=\thisrowno{1}-\thisrowno{2}] {\FEFTMSdata};
+        \addplot[red!30,fill opacity=0.5] fill between[of=upper and lower];
         %%
         \nextgroupplot[height=3cm,ylabel={$\Delta M_h$/GeV},xlabel={$\MS$/GeV},ymin=0,ymax=4,ytick distance=1]
-        \addplot[black,thick,densely dotted] table[x index=0,y index=2] {\NUHMSSMNoFVHimalayaMSdata};
-        \addplot[darkgreen,thick,densely dashed] table[x index=0,y index=2] {\HSSUSYMSdata};
+        \addplot[black,thick,densely dotted] table[x index=0,y index=2] {\FOMSdata};
+        \addplot[darkgreen,thick,densely dashed] table[x index=0,y index=2] {\EFTMSdata};
+        \addplot[red,thick] table[x index=0,y index=2] {\FEFTMSdata};
       \end{groupplot}
     \end{tikzpicture}
   \end{center}
@@ -395,22 +405,30 @@
           ylabel={$M_h$/GeV},
           xticklabels=\empty
         ]
-        \addplot[black,thick,densely dotted,restrict x to domain=-3.5:1] table[x index=0, y index=1] {\NUHMSSMNoFVHimalayaXtdata};
+        \addplot[black,thick,densely dotted,restrict x to domain=-3.5:1] table[x index=0, y index=1] {\FOXtdata};
         \addlegendentry{FO};
-        \addplot[darkgreen,thick,densely dashed] table[x index=0, y index=1] {\HSSUSYXtdata};
+        \addplot[darkgreen,thick,densely dashed] table[x index=0, y index=1] {\EFTXtdata};
         \addlegendentry{EFT};
-        \addplot[black,thick,densely dotted,restrict x to domain=1:3.5] table[x index=0, y index=1] {\NUHMSSMNoFVHimalayaXtdata};
-        \addplot[name path=upper,draw=none,restrict x to domain=-3.5:1] table[x index=0, y expr=\thisrowno{1}+\thisrowno{2}] {\NUHMSSMNoFVHimalayaXtdata};
-        \addplot[name path=lower,draw=none,restrict x to domain=-3.5:1] table[x index=0, y expr=\thisrowno{1}-\thisrowno{2}] {\NUHMSSMNoFVHimalayaXtdata};
+        \addplot[red,thick] table[x index=0, y index=1] {\FEFTXtdata};
+        \addlegendentry{FEFT};
+        %
+        \addplot[black,thick,densely dotted,restrict x to domain=1:3.5] table[x index=0, y index=1] {\FOXtdata};
+        \addplot[name path=upper,draw=none,restrict x to domain=-3.5:1] table[x index=0, y expr=\thisrowno{1}+\thisrowno{2}] {\FOXtdata};
+        \addplot[name path=lower,draw=none,restrict x to domain=-3.5:1] table[x index=0, y expr=\thisrowno{1}-\thisrowno{2}] {\FOXtdata};
         \addplot[black!30,fill opacity=0.5] fill between[of=upper and lower];
         %
-        \addplot[name path=upper,draw=none] table[x index=0, y expr=\thisrowno{1}+\thisrowno{2}] {\HSSUSYXtdata};
-        \addplot[name path=lower,draw=none] table[x index=0, y expr=\thisrowno{1}-\thisrowno{2}] {\HSSUSYXtdata};
+        \addplot[name path=upper,draw=none] table[x index=0, y expr=\thisrowno{1}+\thisrowno{2}] {\EFTXtdata};
+        \addplot[name path=lower,draw=none] table[x index=0, y expr=\thisrowno{1}-\thisrowno{2}] {\EFTXtdata};
         \addplot[darkgreen!30,fill opacity=0.5] fill between[of=upper and lower];
+        %
+        \addplot[name path=upper,draw=none] table[x index=0, y expr=\thisrowno{1}+\thisrowno{2}] {\FEFTXtdata};
+        \addplot[name path=lower,draw=none] table[x index=0, y expr=\thisrowno{1}-\thisrowno{2}] {\FEFTXtdata};
+        \addplot[red!30,fill opacity=0.5] fill between[of=upper and lower];
         %%
         \nextgroupplot[height=3cm,ylabel={$\Delta M_h$/GeV},xlabel={$x_t$ },ymin=0,ymax=3,ytick distance=1]
-        \addplot[black,densely dotted,thick,restrict x to domain=-3.5:1] table[x index=0,y index=2] {\NUHMSSMNoFVHimalayaXtdata};
-        \addplot[darkgreen,thick,densely dashed] table[x index=0,y index=2] {\HSSUSYXtdata};
+        \addplot[black,densely dotted,thick,restrict x to domain=-3.5:1] table[x index=0,y index=2] {\FOXtdata};
+        \addplot[darkgreen,thick,densely dashed] table[x index=0,y index=2] {\EFTXtdata};
+        \addplot[red,thick] table[x index=0,y index=2] {\FEFTXtdata};
       \end{groupplot}
     \end{tikzpicture}
   \end{center}
