--- a/talk.tex
+++ b/talk.tex
@@ -273,7 +273,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{frame}{Hybrid calculation (\texttt{MSSMEFTHiggs})}
+\begin{frame}{Hybrid calculation (\texttt{NUHMSSMNoFVHimalayaEFTHiggs})}
   Similar to pure EFT calculation, but $\hat{\lambda}(\Qmatch)$ is
   determined from
   %
