--- a/talk.tex
+++ b/talk.tex
@@ -273,7 +273,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{frame}{Hybrid calculation (\texttt{NUHMSSMNoFVHimalayaEFTHiggs})}
+\begin{frame}{Hybrid calculation (FlexibleEFTHiggs) \mycite{1609.00371, 2003.04639, 2506.22208}} % (\texttt{NUHMSSMNoFVHimalayaEFTHiggs})
   Similar to pure EFT calculation, but $\hat{\lambda}(\Qmatch)$ is
   determined from
   %
